[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Pixeled_Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Themes/Button_Theme_main_menu.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/UI/ButtonX.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/ListaProfili.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -196.0
margin_top = 326.0
margin_right = 4.0
margin_bottom = 601.0
rect_scale = Vector2( 2, 2 )
alignment = 1

[node name="BtnChoose" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "CHOOSE PLAYER"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 200.0
margin_bottom = 108.0

[node name="BtnAdd" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 200.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "ADD PLAYER"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 200.0
margin_bottom = 180.0

[node name="BtnDelete" type="Button" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 200.0
margin_bottom = 234.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "DELETE PLAYER"

[node name="BtnX" type="Button" parent="."]
margin_left = 35.0
margin_top = 987.0
margin_right = 71.0
margin_bottom = 1017.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 3 )
flat = true

[connection signal="pressed" from="VBoxContainer/BtnChoose" to="." method="_on_BtnChoose_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnAdd" to="." method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnDelete" to="." method="_on_BtnDelete_pressed"]
[connection signal="pressed" from="BtnX" to="." method="_on_BtnX_pressed"]
